fix: Prevent contact-me-picture from wrapping in tablet layout

--- a/src/style.css
+++ b/src/style.css
@@ -202,9 +202,12 @@ footer {
     #contact-me-socials-container {
         justify-content: flex-start;
     }
+    .contact-me-picture-container {
+        width: 50%;
+    }
     #contact-me-picture {
         padding: 1rem;
-        width: 50%;
+        width: 100%;
         height: 100%;
     }
 }
